--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,9 +1,9 @@
 #dashboard{
-    background-color: violet;
+    /* background-color: violet; */
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-    border: 3px solid red;
+    /* border: 3px solid red; */
 }
 #left-nav{
     position: fixed;
@@ -12,113 +12,118 @@
     height: 100%;
     color: white;
     padding: 0;
-    background-color: black;
+    background-color: var(--baseColor);
 }
-#left-nav > div:nth-child(1) {
-    height: 80px;
+.nav-user {
+    width: 0;
     overflow: hidden;
+    transition: width 0.2s;
 }
-#left-nav > div:nth-child(1) > div {
-    font-size: 0.6rem;
-    text-align: center;
+#left-nav:hover > .nav-user{
+    width: 150px;
 }
-#left-nav > div:nth-child(1) > button {
-    font-size: 0.7rem;
-}
-.nav-list{
-    display: flex;
+.nav-user > div{
+    height: 40px;
+    padding: 10px;
     width: 100%;
-    padding: 20px 10px;
-    align-items: center;
-    cursor: pointer;
-    height: 50px;
+    font-size: 0.7rem;
+    white-space: nowrap;
 }
-.nav-list:hover{
-    background-color: rgb(45, 43, 43);
-}
-.nav-list > i {
-    width: 30px;
-    text-align: center;
-}
-.nav-list > div {
-    font-size: 0.75rem;
-}
-.nav-hidden, .nav-user {
-    padding: 0px;
-    width: 0px;
-    overflow: hidden;
-    transition: width 0.2s, padding 0.2s;
-}
-#left-nav:hover .nav-hidden{
-    width: 100px; 
-    padding: 10px;
-}
-#left-nav:hover .nav-user{
-    width: 150px; 
-    padding: 10px;
-}
-#central-dashboard{
-    margin-left: 50px;
-    height: 100%;
-    background-color: aqua;
-}
-.top-nav, .antrian-top{
-    display: none;
-}
-.top-nav > div {
-    width: 50px;
-    color: white;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.nav-user > button{
+    font-size: 0.8rem;
+    margin: 0 10px;
+    width: calc(100% - 20px);
 }
 .nav-close{
     display: none;
 }
+.nav-list{
+    display: flex;
+    height: 50px;
+    align-items: center;
+    cursor: pointer;
+}
+.nav-list > i {
+    margin: 0 10px;
+}
+.nav-list > div {
+    font-size: 0.8rem;
+    width: 0;
+    overflow: hidden;
+    transition: width 0.2s;
+    white-space: nowrap;
+}
+#left-nav:hover > .nav-list > div {
+    width: 80px;
+}
+.top-nav{
+    display: none;
+}
+#central-dashboard{
+    margin-left: 40px;
+    width: calc(100vw - 140px);
+    height: 100vh;
+    overflow: hidden;
+}
+#antrian-pane{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 150px;
+    background-color: white;
+    height: 100vh;
+}
 @media (max-width: 992px) {
-    .top-nav{
+    .nav-close{
         display: block;
-        background-color: black;
-        height: 50px;
+        position: absolute;
+        right: 15px;
+        top:15px;
+        font-size: 1.4rem;
     }
     #left-nav{
-        width: 0px;
+        width: 0;
         overflow: hidden;
-        transition: width 0.3s;
-    }
-    #left-nav.left-nav-show{
-        width: 100vw;
+        transition: width 0.6s;
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-    #left-nav.left-nav-show > .nav-user {
-        padding-top: 20px;
-        width: 200px;
-        overflow: hidden;
+    #left-nav.left-nav-show{
+        width: 100vw;
     }
-    #left-nav.left-nav-show > .nav-list{
-        border-top: 1px solid rgb(88, 85, 85);
-        border-bottom: 1px solid rgb(88, 85, 85);
-        padding: 30px 50px;
+
+    .nav-user{
+        width: 150px;
+        margin: 20px auto;
+        text-align: center;
     }
-    #left-nav.left-nav-show > .nav-list > .nav-hidden{
-        width: 200px;
-        margin-left: 15px;
+    #left-nav.left-nav-show > .nav-list > div {
+        width: 150px;
+        font-size: 1rem;
     }
-    #left-nav.left-nav-show > .nav-list:hover{
-        background-color: rgb(45, 43, 43);
+    .nav-list{
+        height: 75px;
+        width: 100vw;
+        padding-left: 80px;
+        border-top: 1px solid grey;
+        border-bottom: 1px solid grey;
     }
-    .nav-close {
-        position: absolute;
+    .top-nav{
+        background-color: var(--baseColor);
+        height: 55px;
+        padding-left: 15px;
+        display: flex;
+        align-items: center;
         color: white;
-        top: 10px;
-        right: 10px;
-        display: block;
-        font-size: 1.5rem;
     }
     #central-dashboard{
         margin-left: 0;
+        width: 100vw;
+        height: calc(100vh - 55px);
+        overflow: auto;
+    }
+    #antrian-pane{
+        display: none;
     }
 }
