--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,13 +1,11 @@
 #dashboard{
-    /* background-color: violet; */
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-    /* color: rgb(198, 57, 57); */
-    /* border: 3px solid red; */
 }
 #left-nav{
     position: fixed;
+    z-index: 1999;
     left: 0;
     top: 0;
     height: 100%;
@@ -92,7 +90,7 @@
     #left-nav{
         width: 0;
         overflow: hidden;
-        transition: width 0.6s;
+        transition: width 0.3s;
         display: flex;
         flex-direction: column;
         align-items: center;
