--- a/css/home.css
+++ b/css/home.css
@@ -6,61 +6,78 @@
     overflow: hidden;
     display: flex;
 }
-/* #home-container>div{
-    border:1px solid grey;
-} */
+
 .home-pasien-container{
     display: flex;
     flex-direction: column;
     max-width: 300px;
 }
 .pasien-card{
-    padding: 20px;
+    padding: 0px;
     background-color: white;
     border-radius: 10px;
     margin: 10px;
     box-shadow: 5px 6px 8px -1px rgba(0,0,0,0.6);
     -webkit-box-shadow: 5px 6px 8px -1px rgba(0,0,0,0.6);
     -moz-box-shadow: 5px 6px 8px -1px rgba(0,0,0,0.6);
+    position: relative;
+}
+.pasien-card>div:nth-child(1){
     display: flex;
-    flex-direction: column;
+    color: coral;
+    font-size: 1rem;
+    font-weight: bold;
+    align-items: center;
+    overflow: hidden;
+    border-top-left-radius: 10px;
+}
+.pasien-card>div:nth-child(1)>div:nth-child(1){
+    height: 40px;
+    width: 20px;
+    background-color: coral;
+    margin-right: 10px;
+}
+.pasien-card>div:nth-child(2){
+    display: flex;
+    padding: 5px 15px 10px 15px;
 }
 #pasien-card-name{
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    margin-bottom: -3px;
-    font-weight: bold;
-    text-align: center;
-    margin-top: 10px;
-    font-size: 1.1rem;
-}
-#pasien-card-noRM{
-    font-size: 0.8rem;
-    text-align: center;
     margin-bottom: 5px;
+    font-weight: bold;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
-.pasien-card-other{
-    font-size: 0.8rem;
-    text-align: center;
+.pasien-card-other, .pasien-card-orangtua{
+    font-size: 0.65rem;
 }
-.pasien-card>.row>.col{
-    font-size: 0.8rem;
+.pasien-card-orangtua{
+    display: flex;
 }
-.pasien-card>.row>.col>div:nth-child(1){
-    margin-top: 5px;
+div:has(.pasien-card-other)>.pasien-card-other:nth-child(4) {
+    margin-bottom: 5px
 }
-.pasien-card>.row>.col>div{
-    text-align: center;
-    font-size: 0.7rem;
+.pasien-card-orangtua>div:nth-child(1){
+    width: 30px;
 }
 .pasien-card-btn-container{
-    margin-top: 20px;
+    position: absolute;
+    height: 40px;
+    padding: 3px 10px 0 0;
+    display: flex;
+    /* flex-direction: column; */
+    top: 0; right: 0;
 }
-.pasien-card-btn-container button{
-    font-size: 0.8rem;
+.pasien-card button{
+    font-size: 0.7rem;
+    margin-left: 5px;
+    background-color: coral;
+    border-color: coral;
 }
-.pasien-card .col>div:nth-child(1){
-    border-bottom: 1px solid rgb(193, 188, 188);
+.pasien-card button:hover{
+    background-color: rgb(248, 80, 19);
+    border-color: rgb(248, 80, 19);
 }
+
+
 .home-search{
     padding: 0px;
     background-color: white;
@@ -93,8 +110,8 @@ div:has(#searching-filter-show:checked) + #advance-filter{
 }
 .home-search-table-container{
     flex-grow: 1;
-    border-top: 1px solid var(--baseColor);
-    padding: 10px 5px 5px 5px;
+    /* border-top: 1px solid var(--baseColor); */
+    padding: 0 5px 5px 5px;
     overflow: hidden;
 }
 .home-search-table-container>div{
@@ -171,22 +188,18 @@ div:has(#searching-filter-show:checked) + #advance-filter{
     display: block;
 }
 .antrian-list-item{
-    background-color: aqua;
+    background-color: rgb(113, 112, 112);
+    color: white;
     padding: 0;
     display: flex;
     border-radius: 10px;
     margin-bottom: 10px;
 }
-.antrian-list-item:nth-child(odd){
-    background-color: rgb(0, 255, 195);
-    padding: 0;
-    display: flex;
-    border-radius: 10px;
-    margin-bottom: 10px;
-}
+
 .antrian-list-item > div:nth-child(2){
     padding: 5px;
     background-color: rgb(224, 224, 224);
+    color: rgba(0, 0, 0, 0.71);
 }
 .antrian-item-number{
     width: 70px;
@@ -207,6 +220,7 @@ div:has(#searching-filter-show:checked) + #advance-filter{
 .antrian-item-btn{
     margin: -15px 5px 3px auto;
     float: right;
+    font-size: 0.8rem;
 }
 
 @media (max-width: 992px){
@@ -223,8 +237,9 @@ div:has(#searching-filter-show:checked) + #advance-filter{
     }
     .pasien-card{
         padding: 0;
-        border-radius: 0px;
-        margin: 0;
+        border-radius: 10px;
+        margin: 5px;
+        border: 1px solid gray;
         box-shadow:none ; 
         -webkit-box-shadow:none; 
         -moz-box-shadow:none;
@@ -232,50 +247,26 @@ div:has(#searching-filter-show:checked) + #advance-filter{
         flex-direction: column;
         position: relative;
     }
-    #pasien-card-name{
-        text-align: start;
-        padding-left: 10px;
-        padding-right: 120px;
-        margin-top: 5px;
-    }
-    #pasien-card-noRM{
-        text-align: start;
-        padding-left: 10px;
-        padding-right: 120px;
-    }
-    .pasien-card-other{
-        padding-right: 120px;
-        padding-left: 10px;
-        text-align: start;
-    }
-    .pasien-card>.row{
-        position: absolute;
-        right: 0;
-        bottom: 50px;
-        max-width: 120px;
-        display: block !important;
-        margin: 0;
-        padding-left: 0;
-        
-    }
-    .pasien-card>.row>.col{
-        font-size: 0.8rem;
-        padding: 0;
-        padding-right: 5px;
-        text-align: start !important;
-    }
-    .pasien-card>.row>.col>div{
-        /* margin-top: 5px; */
-        text-align: start;
+    .pasien-card>div:nth-child(1)>div:nth-child(1){
+        width: 90px;
+        background-color: coral;
+        margin-right: 10px;
     }   
+    .pasien-card>div:nth-child(2){
+        display: block;
+     }
     .pasien-card-btn-container{
-        margin-top: 10px;
-        margin-bottom: 10px;
-        padding-right: 5px;
+        position: absolute;
+        top: 0; right: 0;
+        width: 200px;
+        height: 40px;
+        padding: 3px 5px 0px 5px;
+        justify-content: end;
+        flex-direction: row;
     }
     .pasien-card-btn-container button{
         margin-left: 5px;
-        float: right;
+        /* float: right; */
     }
     
 
@@ -311,8 +302,7 @@ div:has(#searching-filter-show:checked) + #advance-filter{
     }
     .home-search-table-container{
         flex-grow: 1;
-        border-top: 1px solid var(--baseColor);
-        padding: 10px 5px 5px 5px;
+        padding: 0 5px 15px 5px;
         overflow: hidden;
     }
     .home-search-table-container>div{
