--- a/css/common.css
+++ b/css/common.css
@@ -33,3 +33,8 @@ padding: 0;
     --baseColor: rgb(18, 18, 83);
     --baseColorActive : rgb(34, 34, 140);
 }
+.datePre{
+    width: 0px;
+    border: 0;
+    overflow: hidden;
+}
