--- a/css/newReg.css
+++ b/css/newReg.css
@@ -44,9 +44,9 @@
 .newReg-body-container{flex-grow: 1; overflow: hidden;}
 .newReg-body{height: 100%; width:100%; overflow-y: auto; padding: 20px;}
 
-.newReg-body div{
-    /* border: 1px solid wheat */
-}
+/* .newReg-body div{
+    border: 1px solid wheat
+} */
 .newReg-body label{
     font-size: 0.8rem;
     margin-bottom: 0;
